--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -81,6 +81,6 @@
         "streambuf": "cpp",
         "thread": "cpp",
         "typeindex": "cpp",
-        "typeinfo": "cpp"
+        "typeinfo": "cpp",
     }
 }
